feat：完善方案实践

--- a/Read/ReadMeWiki/00.方案实践/06.卡顿监控设计实践.md
+++ b/Read/ReadMeWiki/00.方案实践/06.卡顿监控设计实践.md
@@ -3,7 +3,8 @@
     - 1.1 项目背景
     - 1.2 遇到问题
     - 1.3 基础概念
-    - 1.4 设计目标
+    - 1.4 卡顿例子
+    - 1.5 设计目标
 - 02.卡顿技术要点说明
     - 2.1 UI卡顿产生原因
     - 2.2 卡顿和ANR的关系
@@ -66,8 +67,13 @@
     - 过度绘制产生卡顿。过度绘制会导致GPU执行时间变长，从而产生丢帧现象。
 
 
+#### 1.4 卡顿例子
+- 卡顿其实分为直观的和微观两个方向的，举个例子
+    - 比如用户点击了登录，预期是得到登录成功/失败的反馈，可现在没有页面刷新，实际的刷新耗时超出了预期，这就是直观的卡顿。
+    - 比如用户在看股票，正常60秒刷新一次，可到了60秒，触发了刷新但是刷新处理逻辑耗时较长，导致新的数据在下一个60秒之前的第59秒才回来，用户基本无感知，主要说的是内部耗时的问题，这种情况可以粗略的理解为微观卡顿。
 
-#### 1.4 设计目标
+
+#### 1.5 设计目标
 - 设计目标要求
     - 对主线程操作进行了完全透明的监控，并能输出有效的信息，帮助开发分析、定位到问题所在，迅速优化应用。
     - 要求接入方便，外部开发者调用简单，非侵入式，简单的两行就打开监控，不需要到处打点，破坏代码优雅性。
@@ -367,3 +373,5 @@
     - https://mp.weixin.qq.com/s/3dubi2GVW_rVFZZztCpsKg
 - 卡顿监控方案
     - https://github.com/markzhai/AndroidPerformanceMonitor
+- 卡顿监控
+    - https://github.com/Knight-ZXW/BlockCanaryX
