--- a/Read/ReadMeWiki/00.方案实践/16.App启动优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/16.App启动优化实践.md
@@ -37,7 +37,12 @@
     - 6.5 异常设计
     - 6.6 兼容性设计
     - 6.7 自测case设计
-
+- 07.启动优化总结
+    - 7.1 启动优化怎么做
+    - 7.2 如何异步策略
+    - 7.3 忽略的注意点
+    - 7.4 迭代优化方案
+    - 7.5 启动效果分析
 
 
 ### 01.启动优化背景
@@ -175,7 +180,7 @@
     - 系统调用优化
 - 启动页面屏蔽返回按键
     - 一般App中都会在启动页面执行一些初始化配置等，所以这时候启动页加载时不希望用户通过按下返回按键退出App，因而可以在启动页中屏蔽返回按键
-- 知道了 attachBaseContext 、onCreate  在应用中最先启动，那么我们就可以通过 TreceView 等性能检测工具，来检测具体函数耗时时间，然后来对其做具体的优化。
+- 知道了 attachBaseContext 、onCreate  在应用中最先启动，那么我们就可以通过 TraceView 等性能检测工具，来检测具体函数耗时时间，然后来对其做具体的优化。
     - 1.项目不及时需要的代码通过异步加载。
     - 2.将对一些使用率不高的初始化，做懒加载。
     - 3.将对一些耗时任务通过开启一个 IntentService来处理。
@@ -304,6 +309,54 @@
     - 是否可以异步
 - 第三步，优化前后的时间对比，变化多大，要求可以衡量
     - 优化前后时间对比
+
+
+### 07.启动优化总结
+#### 7.1 启动优化怎么做
+- 启动优化是怎么做的？
+    - 分析现状、确认问题
+    - 针对性优化（先概括，引导其深入）
+    - 长期保持优化效果
+- 启动流程分析概括
+    - 代码层面分析，启动流程非常复杂，发现主线程任务太多。
+    - 发现有些任务初始化优先级并不是那么高，可以不放在onCreate中执行，觉得可以放在之后延迟执行。
+- 如何保证长期启动优化效果
+    - 做了我们的启动器，并且在线上加上了很多方面的监控。
+
+
+
+#### 7.2 如何异步策略
+- 异步演进的过程
+    - 1.最初是采用的普通的一个异步的方案，即new Thread + 设置线程优先级为后台线程的方式在Application的onCreate方法中进行异步初始化。
+    - 2.使用了线程池、IntentService的方式，但在应用的演进过程当中，发现代码会变得不够优雅，并且有些场景非常不好处理，比如说多个初始化任务直接的依赖关系，比如说某一个初始化任务需要在某一个特定的生命周期中初始化完成，这些都是使用线程池、IntentService无法实现的。
+- 使用启动器优化
+    - 在启动器的概念中，将每一个初始化代码抽象成了一个Task，然后，对它们进行了一个排序，根据它们之间的依赖关系排了一个有向无环图。
+
+
+#### 7.3 忽略的注意点
+- 启动优化有哪些容易忽略的注意点？
+    - cpu time与wall time
+    - 注意延迟初始化的优化
+- 注意两个很重要的指标，即cpu time与wall time
+    - 必须清楚cpu time与wall time之间的区别，wall time指的是代码执行的时间，而cpu time指的是代码消耗CPU的时间，锁冲突会造成两者时间差距过大。需要以cpu time来作为我们优化的一个方向。
+    - 使用了idealHandler来实现cpu空闲时间来执行耗时任务，这极大地提升了用户的体验，避免了因启动耗时任务而导致的页面卡顿现象。
+
+
+#### 7.4 迭代优化方案
+- 版本迭代导致的启动变慢有好的解决方式吗？
+    - 启动器
+    - 监控完善
+- 使用启动器管理每一个初始化任务
+    - 启动器中每一个任务的执行都是被其自动进行分配的，也就是说这些自动分配的task我们会尽量保证它会平均分配在我们每一个线程当中的，这和我们普通的异步是不一样的，它可以很好地缓解我们应用的启动变慢。
+- 监控也需要不断完善
+    - 进行了监控的一个完善，将每一个生命周期都进行了一个监控。
+
+
+
+#### 7.5 启动效果分析
+
+
+
 
 
 ### 参考和学习
