--- a/Read/ReadMeWiki/00.方案实践/17.App页面UI优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/17.App页面UI优化实践.md
@@ -1,19 +1,50 @@
 #### 目录介绍
-- 01.前沿简单介绍
-- 02.UI渲染测量
-- 03.UI优化手段
-- 04.其他布局优化
+- 01.UI优化背景
+    - 1.1 项目背景介绍
+    - 1.2 概念说明
+    - 1.3 衡量标准
+    - 1.4 建设目标
+    - 1.5 产生收益分析
+- 02.UI绘制概念
+    - 2.1 CPU和GPU概念
+    - 2.2 Android渲染演进
+    - 2.3 4.0开启硬件加速
+    - 2.4 4.1：Project Butter
+- 03.UI优化分析工具
+    - 3.1 线下分析工具
+    - 3.2 线上分析工具
+- 04.UI优化策略
+    - 
+- 05.布局优化策略
+    - 5.1 布局检测工具
+    - 5.2 布局卡顿优化
+
+
+### 01.UI优化背景
+#### 1.1 项目背景介绍
+
+
+
+#### 1.2 概念说明
+- 关于UI卡顿优化
+    - 学习了 4 种本地排查卡顿的工具，以及多种线上监控卡顿、帧率的方法。
+- 为什么要回顾卡顿优化呢？
+    - 那是因为 UI 渲染也会造成卡顿，并且肯定会有同学疑惑卡顿优化和 UI 优化的区别是什么。
+- 为何会卡顿
+    - 在 Android 系统的 VSYNC 信号到达时，如果 UI 线程被某个耗时任务堵塞，长时间无法对 UI 进行渲染，这时就会出现卡顿。
+    - UI 优化要解决的核心是由于渲染性能本身造成用户感知的卡顿，它可以认为是卡顿优化的一个子集。
 
 
 
 
-### 01.CPU 与 GPU
+### 02.UI绘制概念
+#### 2.1 CPU和GPU概念
 - 除了屏幕，UI 渲染还依赖两个核心的硬件：CPU 与 GPU。UI 组件在绘制到屏幕之前，都需要经过 Rasterization（栅格化）操作，而栅格化操作又是一个非常耗时的操作。GPU（Graphic Processing Unit ）也就是图形处理器，它主要用于处理图形运算，可以帮助我们加快栅格化操作。
     - ![image](https://static001.geekbang.org/resource/image/1c/8d/1c94e50372ff29ef68690da92c6b468d.png)
 - 你可以从图上看到，软件绘制使用的是 Skia 库，它是一款能在低端设备如手机上呈现高质量的 2D 跨平台图形框架，类似 Chrome、Flutter 内部使用的都是 Skia 库。
 
 
-### 02.Android 渲染的演进
+#### 2.2 Android渲染演进
 - 跟耗电一样，Android 的 UI 渲染性能也是 Google 长期以来非常重视的，基本每次 Google I/O 都会花很多篇幅讲这一块。每个开发者都希望自己的应用或者游戏可以做到 60 fps 如丝般顺滑，不过相比 iOS 系统，Android 的渲染性能一直被人诟病。
 - 我曾经在一篇文章看过一个生动的比喻，如果把应用程序图形渲染过程当作一次绘画过程，那么绘画过程中 Android 的各个图形组件的作用是：
     - 画笔：Skia 或者 OpenGL。我们可以用 Skia 画笔绘制 2D 图形，也可以用 OpenGL 来绘制 2D/3D 图形。正如前面所说，前者使用 CPU 绘制，后者使用 GPU 绘制。
@@ -22,7 +53,7 @@
     - 显示：SurfaceFlinger。它将 WindowManager 提供的所有 Surface，通过硬件合成器 Hardware Composer 合成并输出到显示屏。
 
 
-### 03.Android 4.0：开启硬件加速
+#### 2.3 4.0开启硬件加速
 - 在 Android 3.0 之前，或者没有启用硬件加速时，系统都会使用软件方式来渲染 UI。
     - ![image](https://static001.geekbang.org/resource/image/8f/97/8f85be65392fd7b575393e5665f49a97.png)
 - 整个流程如上图所示：
@@ -37,19 +68,19 @@
     - ![image](https://static001.geekbang.org/resource/image/f9/51/f9da12b7c4d49f47d650cd8e14303c51.png)
 
 
-### 04.Android 4.1：Project Butter
+#### 2.4 4.1：Project Butter
 - Project Butter 主要包含两个组成部分，一个是 VSYNC，一个是 Triple Buffering。
 
-
-#### 4.1 VSYNC 信号
+##### 4.1.1 VSYNC 信号
 - 在讲文件 I/O 跟网络 I/O 的时候，我讲到过中断的概念。对于 Android 4.0，CPU 可能会因为在忙别的事情，导致没来得及处理 UI 绘制。
 - 为解决这个问题，Project Buffer 引入了VSYNC，它类似于时钟中断。每收到 VSYNC 中断，CPU 会立即准备 Buffer 数据，由于大部分显示设备刷新频率都是 60Hz（一秒刷新 60 次），也就是说一帧数据的准备工作都要在 16ms 内完成。
     - ![image](https://static001.geekbang.org/resource/image/06/bd/06753998a26642edd3481f85fc93c8bd.png)
 - 这样应用总是在 VSYNC 边界上开始绘制，而 SurfaceFlinger 总是 VSYNC 边界上进行合成。这样可以消除卡顿，并提升图形的视觉表现。
 
 
-#### 4.2 三缓冲机制 Triple Buffering
-- 在 Android 4.1 之前，Android 使用双缓冲机制。怎么理解呢？一般来说，不同的 View 或者 Activity 它们都会共用一个 Window，也就是共用同一个 Surface。
+##### 4.1.2 三缓冲机制 Triple Buffering
+- 在 Android 4.1 之前，Android 使用双缓冲机制。怎么理解呢？
+    - 一般来说，不同的 View 或者 Activity 它们都会共用一个 Window，也就是共用同一个 Surface。
 - 每个 Surface 都会有一个 BufferQueue 缓存队列，但是这个队列会由 SurfaceFlinger 管理，通过匿名共享内存机制与 App 应用层交互。
     - ![image](https://static001.geekbang.org/resource/image/88/96/887c5ff4ae381733a95634c115c7a296.png)
 - 整个流程如下：
@@ -62,16 +93,34 @@
     - ![image](https://static001.geekbang.org/resource/image/4d/ed/4d84d2d6a8f8e25e1622665141d993ed.png)
 
 
+### 05.布局优化策略
+#### 5.1 布局检测工具
+- 统计线上的FPS，使用的就是Choreographer这个类，它具有以下特性：
+    - 1、能够获取整体的帧率。
+    - 2、能够带到线上使用。
+    - 3、它获取的帧率几乎是实时的，能够满足我们的需求。
+- 统计线下布局的损耗
+    - 如果要去优化布局加载带来的时间消耗，那就需要检测每一个布局的耗时，对此我使用的是AOP的方式，它没有侵入性
+    - 如果还要更细粒度地去检测每一个控件的加载耗时，那么就需要使用LayoutInflaterCompat.setFactory2这个方法去进行Hook。
+- 辅助排查工具
+    - LayoutInspector和Systrace这两个工具，Systrace可以很方便地看到每帧的具体耗时以及这一帧在布局当中它真正做了什么。而LayoutInspector可以很方便地看到每一个界面的布局层级，帮助我们对层级进行优化。
 
 
-### 01.前沿简单介绍
-- 关于卡顿优化
-    - 学习了 4 种本地排查卡顿的工具，以及多种线上监控卡顿、帧率的方法。
-- 为什么要回顾卡顿优化呢？
-    - 那是因为 UI 渲染也会造成卡顿，并且肯定会有同学疑惑卡顿优化和 UI 优化的区别是什么。
-- 为何会卡顿
-    - 在 Android 系统的 VSYNC 信号到达时，如果 UI 线程被某个耗时任务堵塞，长时间无法对 UI 进行渲染，这时就会出现卡顿。
-    - UI 优化要解决的核心是由于渲染性能本身造成用户感知的卡顿，它可以认为是卡顿优化的一个子集。
+#### 5.2 布局卡顿优化
+- 分析完布局加载流程之后，发现有如下四点可能会导致布局卡顿：
+    - 1、首先，系统会将我们的Xml文件通过IO的方式映射的方式加载到我们的内存当中，而IO的过程可能会导致卡顿。
+    - 2、其次，布局加载的过程是一个反射的过程，而反射的过程也会可能会导致卡顿。
+    - 3、同时，这个布局的层级如果比较深，那么进行布局遍历的过程就会比较耗时。
+    - 4、最后，不合理的嵌套RelativeLayout布局也会导致重绘的次数过多。
+- 对此，我们的优化方式有如下几种：
+    - 针对布局加载Xml文件的优化，我们使用了异步Inflate的方式，即AsyncLayoutInflater。它的核心原理是在子线程中对我们的Layout进行加载，而加载完成之后会将View通过Handler发送到主线程来使用。
+    - 可以使用ConstraintLayout去减少我们界面布局的嵌套层级，如果原始布局层级越深，它能减少的层级就越多。而使用它也能避免嵌套RelativeLayout布局导致的重绘次数过多。
+    - 可以使用AspectJ框架（即AOP）和LayoutInflaterCompat.setFactory2的方式分别去建立线下全局的布局加载速度和控件加载速度的监控体系。
+
+
+
+
+
 
 
 
