--- a/Read/ReadMeWiki/00.方案实践/18.App稳定性专项实践.md
+++ b/Read/ReadMeWiki/00.方案实践/18.App稳定性专项实践.md
@@ -30,7 +30,11 @@
     - 5.6 总结与复盘
 - 06.稳定性方案落地
     - 6.1 架构演进
-
+- 07.稳定性优化总结
+    - 7.1 做了哪些优化
+    - 7.2 如何保证稳定性
+    - 7.3 保障业务稳定性
+    - 7.4 异常快速止损
 
 
 
@@ -275,7 +279,40 @@
 
 
 
+### 07.稳定性优化总结
+#### 7.1 做了哪些优化
+- 针对稳定性开启了专项的优化，我们主要优化了三项：
+    - Crash专项优化（=>2)；性能稳定性优化（=>2)；业务稳定性优化（=>3)
 
+
+#### 7.2 如何保证稳定性
+- 性能稳定性是怎么做的？
+    - 全面的性能优化：启动速度、内存优化、绘制优化
+    - 线下发现问题、优化为主
+    - 线上监控为主
+    - Crash专项优化
+- 优化分为两个层次
+    - 优化主要分为了两个层次，即线上和线下，针对于线下，侧重于发现问题，直接解决，将问题尽可能在上线之前解决为目的。
+    - 而到了线上，最主要的目的就是为了监控，对于各个性能纬度的监控呢，可以让我们尽可能早地获取到异常情况的报警。
+
+
+
+#### 7.3 保障业务稳定性
+- 业务稳定性如何保障？
+    - 数据采集 + 报警
+    - 需要对项目的主流程与核心路径进行埋点监控
+    - 同时还需知道每一步发生了多少异常，这样，我们就知道了所有业务流程的转换率以及相应界面的转换率
+    - 结合大盘，如果转换率低于某个值，进行报警
+    - 异常监控 + 单点追查
+    - 兜底策略
+- 业务高可用侧重于用户功能完整可用
+    - 需要对项目的主流程、核心路径进行埋点监控，来计算每一步它真实的转换率是多少。
+    - 开发过程当中代码中出现了一些catch代码块，捕获住了异常，让程序不崩溃，这其实是不合理的，程序虽然没有崩溃，当时程序的功能已经变得不可用，这些被catch的异常也需要上报上来，这样才能知道用户到底出现了什么问题而导致的异常。
+    - 线上还有一些单点问题，比如说某用户点击登录偶发一直进不去，这种就属于单点问题。需要通过核心链路日志排查原因。
+
+
+
+#### 7.4 异常快速止损
 
 
 
