--- a/Read/ReadMeWiki/00.方案实践/13.内存治理优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/13.内存治理优化实践.md
@@ -17,7 +17,7 @@
     - 3.5 内存泄漏引用链
 - 04.其他内存优化治理
     - 4.1 代码层内存分析
-    - 4.2 
+    - 4.2 如何避免内存抖动
     - 4.7 ComponentCallback优化
     - 4.8 四种引用优化
     - 4.9 关于log日志
@@ -189,6 +189,15 @@
 
 
 ### 04.其他优化治理
+
+#### 4.2 如何避免内存抖动
+- 内存抖动是由于短时间内有大量对象进出新生区导致的，它伴随着频繁的GC，gc会大量占用ui线程和cpu资源，会导致app整体卡顿。避免发生内存抖动的几点建议：
+    - 尽量避免在循环体内创建对象，应该把对象创建移到循环体外。
+    - 注意自定义View的onDraw()方法会被频繁调用，所以在这里面不应该频繁的创建对象。
+    - 当需要大量使用Bitmap的时候，试着把它们缓存在数组或容器中实现复用。
+    - 对于能够复用的对象，同理可以使用对象池将它们缓存起来。
+
+
 #### 4.7 ComponentCallback优化
 - 关于ComponentCallback2，是一个细粒度的内存回收管理回调。
     - 开发者应该实现onTrimMemory(int)方法，细粒度release 内存，参数可以体现不同程度的内存可用情况
