--- a/Read/ReadMeWiki/01.大型方案/22.日志打印和存储实践.md
+++ b/Read/ReadMeWiki/01.大型方案/22.日志打印和存储实践.md
@@ -12,6 +12,7 @@
     - 2.4 组装log日志设计
     - 2.5 日志文件创建机制
     - 2.6 日志缓存的策略
+    - 2.8 日志存储GZip压缩
     - 2.9 多进程存储问题
 - 03.关键技术点说明
     - 3.1 aidl通信步骤
@@ -101,6 +102,10 @@
 
 
 #### 2.6 日志缓存的策略
+
+
+#### 2.8 日志存储GZip压缩
+- https://juejin.cn/post/7083634028640731143
 
 
 #### 2.9 多进程存储问题
