--- a/Read/ReadMeWiki/09.问题思考/00.Android高频考点.md
+++ b/Read/ReadMeWiki/09.问题思考/00.Android高频考点.md
@@ -1,5 +1,30 @@
 # Android问题汇总
 #### 目录介绍
+- 01.基础原理
+- 02.经典框架
+- 03.性能优化
+- 04.常见算法
+
+
+
+
+### 01.基础原理
+- 怎么加载一张超大图？加载大图如何避免OOM，平常是怎么压缩图片的？如何加载超高清大图，局部加载图片了解嘛？
+- Android有哪些跨进程通信，AIDL的代码实现？aidl平常使用有哪些注意点？
+- View的绘制流程，包括渲染和View本身的绘制3部曲。View是如何加载到Window上到？
+- Handler的工作流程，源码要记牢，细节要理解透，比如怎么唤醒主线程的，while为啥不会阻塞主线程。
+- 说下handler的流程，异步消息是什么？Android中哪些场景会发送异步消息？我们在代码中可以手动发异步消息吗？
+
+
+
+### 02.经典框架
+- mmkv了解吗？它是如何存储数据的，mmap为什么比io高效，如何避免线程安全，为何进程杀死后仍然能保存好数据，是怎么做到的？
+- 简述okhttp源码，请求怎么管理，它的线程池怎么实现？
+
+
+### 03.性能优化
+- ANR怎么排查，有哪些原因？一般造成ANR都有哪些原因？
+- 内存泄漏怎么排查，OOM怎么排查？平常有做过哪些内存优化相关的工作？
 
 
 
