--- a/Read/ReadMeWiki/09.问题思考/01.Java相关问题汇总.md
+++ b/Read/ReadMeWiki/09.问题思考/01.Java相关问题汇总.md
@@ -110,6 +110,7 @@
 - 说一说多线程原理，如果线程过多,会怎样？多线程的优点？同时多线程的缺点？
 - 多线程具有什么优点和缺点？为什么说开启大量的线程,会降低程序的性能，那么该如何做才能降低性能？
 - 现在有T1、T2、T3三个线程，你怎样保证T2在T1执行完后执行，T3在T2执行完后执行？
+- 多个线程异步执行任务，主线程需要等待它们都完成再继续，有哪些实现方式？
 - 在Java中Lock接口比synchronized块的优势是什么？你需要实现一个高效的缓存，它允许多个用户读，但只允许一个用户写，以此来保持它的完整性，你会怎样去实现它？
 - 多线程的使用场景？什么情况下会导致线程并发，为什么会产生这种问题，又是如何解决的？
 - volatile这个关键字是怎么解决的？在并发环境中如何确保程序的可见性、顺序性和一致性？
