--- a/Read/ReadMeWiki/09.问题思考/03.Android问题汇总.md
+++ b/Read/ReadMeWiki/09.问题思考/03.Android问题汇总.md
@@ -14,6 +14,8 @@
 - 13.Framwork相关问题
 - 14.控件相关问题汇总
 - 15.Android进程IPC
+- 16.其他各类问题汇总
+- 17.Android编译问题
 
 
 ### 01.四大组件问题汇总
@@ -91,7 +93,7 @@
 ### 04.Android消息机制
 #### 4.1 Handler消息机制
 - 请说一下Android消息机制？[注意：这个问题太大，说的时候分类表达]子线程中是否可以new一个handler对象？会出现什么问题，为什么？
-- Looper从消息队列中取出消息后，如何传递给handler？消息队列MessageQuee底层怎么实现的？
+- Looper从消息队列中取出消息后，如何传递给handler？消息队列MessageQuee底层怎么实现的？handler里面的nativePollOnce 为什么不会anr？
 - Handler、Thread和HandlerThread的差别 ？HandlerThread是怎么实现的？
 - Looper.loop()为什么不会阻塞主线程，IdleHandler（闲时机制）是做什么用的？
 - Handler机制，IdleHandler执行时机。Handler#postDelay(runnable, 20s) 一个消息，然后把手机时间调整为1分钟后，刚才的runnable会不会执行。
@@ -103,6 +105,7 @@
 
 
 #### 4.3 同步消息屏障
+- 说下handler的流程，异步消息是什么？Android中哪些场景会发送异步消息？我们在代码中可以手动发异步消息吗？
 - 什么是消息同步屏障？Android中是如何实现消息同步屏障的？同步屏障的目的主要是为了什么？
 - Choreographer是什么？Choreographer发出异步消息后如何执行任务？
 
@@ -162,6 +165,7 @@
 ### 12.Jetpack相关问题
 - LiveData，连续set两个相同的数据，会收到几次；连续post两个相同的数据，会收到几次；liveData能在子线程接收么？
 - ViewModel：如何实现Activity旋转之后，依旧能恢复数据的？
+- ViewModel源码实现，它在Activity重启后为什么恢复数据？数据保存在哪里？和onSaveInstanceState有啥区别？
 
 
 
@@ -177,25 +181,28 @@
 - SurfaceView和View的最本质的区别？SurfaceView为什么不会造成画面卡顿？它底部是如何实现的？
 - ViewPager使用细节，如何设置成每次只初始化当前的Fragment，其他的不初始化
 - 说一下RecyclerView绘制步骤和复用机制，复用机制底层是用什么数据结构？聊聊RecyclerView，动画，缓存，数据绑定底层是如何实现的。如何自己实现RecyclerView的侧滑删除？
-
+- 加载xml和动态创建view哪个高效？为什么加载xml效率低？
 
 
 ### 15.Android进程IPC
-- 常见的跨进程通信方式，AIDL的实现原理？
+- 常见的跨进程通信方式，AIDL的实现原理？AIDL解决了什么问题？AIDL如何使用？多进程场景遇见过么？谈谈对进程共享和线程安全的认识……
 - 说一下你对IPC机制的理解？如果一个APP里面有多进程存在，请列举你所知道的全部IPC方法……
 - 说一下Binder大概是怎么实现的？既然有现有的IPC方式，为什么重新设计一套Binder机制呢。
 - Binder机制：ServiceManager什么时候注册的？这个是用来干嘛的？
 - Binder内核所在的进程是如何找到到Server跟Client进行通信的
 - ServiceManager是一个单独的进程，那么Server与ServiceManager通讯是靠什么呢？
 - Android Binder机制是做什么的，为什么选用Binder，原理了解吗？
-- AIDL解决了什么问题？AIDL如何使用？多进程场景遇见过么？谈谈对进程共享和线程安全的认识……
 
 
 
+### 16.其他各类问题汇总
+- 有没有接触过Socket编程，简单说下代码实现。
 
 
 
-
+### 17.Android编译问题
+- gradle生命周期，怎么自定义插件？统计编译耗时插件，运行在哪个阶段？
+- 描述从编译到apk的过程，以及gradle有哪些task参与其中？
 
 
 
