--- a/Read/ReadMeWiki/09.问题思考/04.Android性能优化.md
+++ b/Read/ReadMeWiki/09.问题思考/04.Android性能优化.md
@@ -5,21 +5,32 @@
 - 03.网络相关问题汇总
 - 04.ANR相关问题汇总
 - 05.卡顿相关问题汇总
+- 06.稳定性相关的问题
+- 07.App启动流程优化
 - 09.主流库问题大汇总
 - 10.so库崩溃问题汇总
+- 11.Android性能优化
 
 
 
 ### 01.内存相关问题汇总
 - 内存泄漏常见的有哪几种？如何检测？LeakCanary原理，Activity、Fragment
 - 说一下四中引用的区别和使用场景，什么情况下会导致应用内存空间不足？弱引用和软引用有什么区别？
+- OOM是什么？有哪些场景会造成OOM，如何解决？那么Oom是否可以try catch？为什么？
+- 内存泄漏是什么？ 如何防止线程的内存泄漏？ Java多线程引发的性能问题，怎么解决？ 如何对Android 应用进行性能分析以及优化? 
+- activity有个内部类handler，描述下引用关系链路，并说明为何gcRoots能访问到activity
+
 
 
 ### 02.崩溃相关问题汇总
+- SharePreference性能优化，可以做进程同步吗？具体是怎么优化的呢？
+
 
 
 ### 03.网络相关问题汇总
 - 服务器只提供数据接收接口，在多线程或多进程条件下，如何保证数据的有序到达？
+- Https请求慢的解决办法（提示：DNS，携带数据，直接访问IP）
+- 现在下载速度很慢,试从网络协议的角度分析原因,并优化(提示：网络的5层都可以涉及)。
 
 
 
@@ -30,8 +41,17 @@
 
 
 ### 05.卡顿相关问题汇总
-- 卡顿如何解决？
-- UI卡顿的原因有哪些？如何优化？
+- 卡顿如何解决？UI卡顿的原因有哪些？如何优化？
+- Bitmap 使用需要注意哪些问题？Bitmap.recycle() 会立即回收么？什么时候会回收？如果没有地方使用这个 Bitmap，为什么垃圾回收不会直接回收它？
+
+
+### 06.稳定性相关的问题
+- 你们做了哪些稳定性方面的优化？性能稳定性是怎么做的？项目中是如何保障业务稳定性的，针对异常问题如何止损？
+
+
+### 07.App启动流程优化
+- 启动优化做了哪些工作？是怎么保障优化效果的？在版本迭代中如何避免不断添加代码导致启动变慢的问题？
+- 异步加载为何要这样做？可以用子线程或者线程池
 
 
 
@@ -39,36 +59,13 @@
 - Retrofit采用动态代理，那么什么是动态代理，有何特点？
 - 使用过什么图片加载库，Glide 的源码设计哪里很微妙？说一下三级缓存的原理？描述一下内存缓存的容器？
 - 官方为什么会把 HttpClient 和 HttpUrlConnection 替换为 OkHttp 默认实现？它有什么好处？
+- 说一下你常用图片加载框架的缓存实现是怎么进行的？LRUCache原理……
+
+
+
 
 ### 10.so库崩溃问题汇总
 - so奔溃如何解决？
-
-
-
-### 2.1.6 Android基础之性能优化
-#### 2.1.6.1 代码优化
-- SharePreference性能优化，可以做进程同步吗？具体是怎么优化的呢？
-- Bitmap 使用需要注意哪些问题？Bitmap.recycle() 会立即回收么？什么时候会回收？如果没有地方使用这个 Bitmap，为什么垃圾回收不会直接回收它？
-
-
-#### 2.1.6.2 布局优化
-- 说一下布局性能的排序，谁的效率最高？说一下约束布局的好处？
-- 自定义View注意事项，为什么说减少不必要的调用invalidate()方法 ？
-
-
-#### 2.1.6.3 内存泄漏优化
-- 常见的内存泄漏有哪些？又是如何解决这些内存泄漏的？并且针对常见的内存泄漏造成的原因是什么？
-- 内存泄漏是什么？ 如何防止线程的内存泄漏？ Java多线程引发的性能问题，怎么解决？ 如何对Android 应用进行性能分析以及优化? 
-
-
-#### 2.1.6.4 其他优化
-- 说一下你常用图片加载框架的缓存实现是怎么进行的？LRUCache原理……
-- 启动页白屏及黑屏解决？为什么会出现这种情况？
-- 现在下载速度很慢,试从网络协议的角度分析原因,并优化(提示：网络的5层都可以涉及)。
-- Https请求慢的解决办法（提示：DNS，携带数据，直接访问IP）
-- 如何做Android应用保活，具体的原理是什么？有哪些方式可以保活？
-- OOM是什么？有哪些场景会造成OOM，如何解决？那么Oom是否可以try catch？为什么？
-
 
 
 
