feat：完善文档输出

--- a/Read/ReadMeWiki/09.问题思考/03.Android问题汇总.md
+++ b/Read/ReadMeWiki/09.问题思考/03.Android问题汇总.md
@@ -115,12 +115,13 @@
 - Android中为什么要使用多线程，说下多线程？
 - 静态同步锁与普通同步锁的区别？具体有哪些使用场景……什么导致线程阻塞？线程如何关闭？
 - java线程，场景实现，多个线程如何同时请求，返回的结果如何等待所有线程数据完成后合成一个数据
-
+- 如果我开了 18 个子线程，同时发送，并发的情况下如何保证消息及时性？
 
 
 #### 5.2 异步机制
 - AsyncTask机制说一下……如何取消AsyncTask？并且它存在哪些不足？Asynctask对应的线程池是什么？
 - AsyncTask生命周期随着activity销毁而销毁吗？为什么？当activity屏幕出现旋转时，AsyncTask会出现什么情况？AsyncTask如何造成内存泄漏，有没有解决办法？AsyncTask执行是并行还是串行？
+- 你觉得使用 IntentService 和自己写一个异步加载有什么区别吗？
 
 
 #### 5.3 线程池
@@ -137,6 +138,10 @@
 ### 08.Android多媒体问题
 - 如何给控件的背景设置圆角。做图片圆角的原理是什么，平常有哪些优化操作
 - 从网络加载一个10M的图片，说下注意事项？如何预防OOM？如何计算一个Bitmap占用内存的大小，怎么保证加载Bitmap不产生内存溢出？
+- svg 为什么体积会比较小？为什么是可伸缩的？是否可以无损缩放？svg 是否可以放一张照片，为什么？
+- 假设现在让你实现图片上覆盖一个旋转角度 45 度 label，如何实现，列举你知道的方案。
+- Luban 压缩具体实现原理，可以自己写吗？Luban 压缩如何保证压缩的同时，图片质量还清晰？
+
 
 
 
@@ -164,8 +169,14 @@
 
 ### 12.Jetpack相关问题
 - LiveData，连续set两个相同的数据，会收到几次；连续post两个相同的数据，会收到几次；liveData能在子线程接收么？
-- ViewModel：如何实现Activity旋转之后，依旧能恢复数据的？
+- LiveData 如何实现双向绑定。View 到 Model，Model 到 View 如何实现绑定？
+- ViewModel：如何实现Activity旋转之后，依旧能恢复数据的？ViewModel 如何绑定不同的页面？ViewModel 是单向绑定还是双向绑定？
 - ViewModel源码实现，它在Activity重启后为什么恢复数据？数据保存在哪里？和onSaveInstanceState有啥区别？
+- ViewModel 为什么存在？那我直接创建个类不可以吗？如何实现数据绑定。ViewModel 如何实现生命周期绑定？
+- ViewModel 是怎么和 View 之间怎么绑定的？如何通讯。
+- ViewModel 充当业务逻辑层，如果两个模块逻辑一样，只是 UI 不一样，如何保证复用？
+
+
 
 
 
@@ -182,6 +193,7 @@
 - ViewPager使用细节，如何设置成每次只初始化当前的Fragment，其他的不初始化
 - 说一下RecyclerView绘制步骤和复用机制，复用机制底层是用什么数据结构？聊聊RecyclerView，动画，缓存，数据绑定底层是如何实现的。如何自己实现RecyclerView的侧滑删除？
 - 加载xml和动态创建view哪个高效？为什么加载xml效率低？
+- TextView 中 setText(Html.fromHtml()) 内部原理知道吗？
 
 
 ### 15.Android进程IPC
