--- a/Read/ReadMeWiki/09.问题思考/00.Android高频考点.md
+++ b/Read/ReadMeWiki/09.问题思考/00.Android高频考点.md
@@ -19,7 +19,9 @@
 
 ### 02.经典框架
 - mmkv了解吗？它是如何存储数据的，mmap为什么比io高效，如何避免线程安全，为何进程杀死后仍然能保存好数据，是怎么做到的？
-- 简述okhttp源码，请求怎么管理，它的线程池怎么实现？
+- 简述okhttp源码，请求怎么管理，它的线程池怎么实现？网络请求缓存处理是怎样的逻辑思路？
+- module A 和 module B 之间有需要调用 Api 这块怎么解决的？module A 和 module B 之间如何通讯？
+
 
 
 ### 03.性能优化
