--- a/Read/ReadMeWiki/09.问题思考/03.Android问题汇总.md
+++ b/Read/ReadMeWiki/09.问题思考/03.Android问题汇总.md
@@ -16,6 +16,7 @@
 - 15.Android进程IPC
 - 16.其他各类问题汇总
 - 17.Android编译问题
+- 18.项目架构相关问题
 
 
 ### 01.四大组件问题汇总
@@ -92,40 +93,29 @@
 
 ### 04.Android消息机制
 #### 4.1 Handler消息机制
-- 请说一下Android消息机制？[注意：这个问题太大，说的时候分类表达]子线程中是否可以new一个handler对象？会出现什么问题，为什么？
+- 请说一下Android消息机制？子线程中是否可以new一个handler对象？会出现什么问题，为什么？如何提高Message的优先级？
 - Looper从消息队列中取出消息后，如何传递给handler？消息队列MessageQuee底层怎么实现的？handler里面的nativePollOnce 为什么不会anr？
 - Handler、Thread和HandlerThread的差别 ？HandlerThread是怎么实现的？
 - Looper.loop()为什么不会阻塞主线程，IdleHandler（闲时机制）是做什么用的？
 - Handler机制，IdleHandler执行时机。Handler#postDelay(runnable, 20s) 一个消息，然后把手机时间调整为1分钟后，刚才的runnable会不会执行。
-
-
-#### 4.2 ThreadLocal
 - ThreadLocal是如何做到线程间的不共享数据的，ThreadLocalMap里面的key和value是什么。
 - ThreadLocal原理，实现及如何保证Local属性？
-
-
-#### 4.3 同步消息屏障
 - 说下handler的流程，异步消息是什么？Android中哪些场景会发送异步消息？我们在代码中可以手动发异步消息吗？
 - 什么是消息同步屏障？Android中是如何实现消息同步屏障的？同步屏障的目的主要是为了什么？
 - Choreographer是什么？Choreographer发出异步消息后如何执行任务？
 
 
 ### 05.Android多线程问题
-#### 5.1 Android多线程
 - Android中为什么要使用多线程，说下多线程？
 - 静态同步锁与普通同步锁的区别？具体有哪些使用场景……什么导致线程阻塞？线程如何关闭？
 - java线程，场景实现，多个线程如何同时请求，返回的结果如何等待所有线程数据完成后合成一个数据
 - 如果我开了 18 个子线程，同时发送，并发的情况下如何保证消息及时性？
-
-
-#### 5.2 异步机制
 - AsyncTask机制说一下……如何取消AsyncTask？并且它存在哪些不足？Asynctask对应的线程池是什么？
 - AsyncTask生命周期随着activity销毁而销毁吗？为什么？当activity屏幕出现旋转时，AsyncTask会出现什么情况？AsyncTask如何造成内存泄漏，有没有解决办法？AsyncTask执行是并行还是串行？
 - 你觉得使用 IntentService 和自己写一个异步加载有什么区别吗？
-
-
-#### 5.3 线程池
 - 线程池的核心参数。如果core为5，提交了三个任务，分别被三个线程执行了，其中一个任务提前执行完毕了，此时再提交一个任务，这个任务是如何执行的？
+- 线程池运行流程，你们平时怎么使用线程池？一个线程池够吗？
+
 
 
 
@@ -194,6 +184,8 @@
 - 说一下RecyclerView绘制步骤和复用机制，复用机制底层是用什么数据结构？聊聊RecyclerView，动画，缓存，数据绑定底层是如何实现的。如何自己实现RecyclerView的侧滑删除？
 - 加载xml和动态创建view哪个高效？为什么加载xml效率低？
 - TextView 中 setText(Html.fromHtml()) 内部原理知道吗？
+- SurfaceView, TextureView及View的区别。SurfaceView怎么控制它处于的层级。
+
 
 
 ### 15.Android进程IPC
@@ -216,6 +208,11 @@
 - gradle生命周期，怎么自定义插件？统计编译耗时插件，运行在哪个阶段？
 - 描述从编译到apk的过程，以及gradle有哪些task参与其中？
 
+
+### 18.项目架构相关问题
+- 介绍一下MVC，MVP，MVVM，你们项目用的是哪个？
+- 对组件化的理解，你们是怎么实现组件化的？功能模块之间互相引用会有什么问题？
+  
 
 
 
