--- a/Read/ReadMeWiki/09.问题思考/04.Android性能优化.md
+++ b/Read/ReadMeWiki/09.问题思考/04.Android性能优化.md
@@ -43,6 +43,8 @@
 ### 05.卡顿相关问题汇总
 - 卡顿如何解决？UI卡顿的原因有哪些？如何优化？
 - Bitmap 使用需要注意哪些问题？Bitmap.recycle() 会立即回收么？什么时候会回收？如果没有地方使用这个 Bitmap，为什么垃圾回收不会直接回收它？
+- 性能优化；ConstraintLayout为什么效果好？为什么多了层级，性能可能会差很多？
+  
 
 
 ### 06.稳定性相关的问题
